--- a/templates/base.html
+++ b/templates/base.html
@@ -51,11 +51,11 @@
         <li><a href="/newpost">Add Item</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          {% if not user %}
-          <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-          <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          {% if not username %}
+          <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login/Signup</a></li>
           {% else %}
-          <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+          <li><a>{{username}}</a></li>
+          <li><a href="/disconnect"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
           {% endif %}
         </ul>
       </div>
