Complete user website

--- a/templates/delete.html
+++ b/templates/delete.html
@@ -21,7 +21,7 @@
 
       <form class="form-horizontal" method="post">
 
-        <input type="hidden" name="item_id" value="{{ item_id }}">
+        <input type="hidden" name="item_id" value="{{ item.id }}">
 
         <p> Do you really want to delete {{item.name}}?</p>
 
