--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,9 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="/">CatLog</a>
         </div>
+        <ul class="nav navbar-nav">
+        <li><a href="/JSON">JSON data</a></li>
+        </ul>
         {% if username %}
           <ul class="nav navbar-nav">
           <li><a href="/newitem">Add Item</a></li>
