Add JSON to all data

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,14 +47,12 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="/">CatLog</a>
         </div>
-        <ul class="nav navbar-nav">
-        <li><a href="/JSON">JSON data</a></li>
-        </ul>
         {% if username %}
           <ul class="nav navbar-nav">
           <li><a href="/newitem">Add Item</a></li>
           </ul>
         {% endif %}
+        {% block navbar %}{% endblock %}
         <ul class="nav navbar-nav navbar-right">
           {% if not username %}
           <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login/Signup</a></li>
